@@ -110,8 +110,9 @@
                            'Accton::ES3528M' => 'Accton ES3528M',
                            'AeroHIVE::AP' => 'AeroHIVE AP',
                            'Amer::SS2R24i' => 'Amer SS2R24i',
-                           'Aruba::Controller_200' => 'Aruba Controller 200', 
-                           'Avaya' => 'Avaya (see Nortel)', 
+                           'Aruba::Controller_200' => 'Aruba Controller 200',
+                           'Avaya::WC' => 'Avaya Wireless Controller', 
+                           'Avaya' => 'Avaya Switch (see Nortel)', 
                            'Cisco::Aironet_1130' => 'Cisco Aironet 1130',
                            'Cisco::Aironet_1242' => 'Cisco Aironet 1242',
                            'Cisco::Aironet_1250' => 'Cisco Aironet 1250',
