@@ -27,6 +27,11 @@ Compatibility notice
  * Removed support for Apache prior to version 2.2.0 (#828)
  * Removed support for jpgraph 1.x which bumps our depedencies to PHP 5
 
+New Hardware Support
+ * LG-Ericsson iPecs 4500 support for port-security
+ * Avaya Wireless Controller support
+ * Netgear FGS Series support for port-security 
+
 New features
  * Major update to the captive portal look and feel! More modern and 
    professional. Cleaner XHTML/CSS makes customization a lot easier than before.
